Fixed spotlight on small

--- a/css/app.css
+++ b/css/app.css
@@ -3179,7 +3179,8 @@ html, body, main {
   position: relative; }
 
 .wrap {
-  padding: 22% 0; }
+  padding: 25% 0;
+  padding: 25% 0; }
   @media only screen and (min-width:40.063em) {
     .wrap {
       padding: 20% 0; } }
@@ -3188,7 +3189,16 @@ html, body, main {
       padding: 15% 0; } }
   @media only screen and (min-width:90.063em) {
     .wrap {
-      padding: 12% 0; } }
+      padding: 10% 0; } }
+  @media only screen and (min-width:40.063em) {
+    .wrap {
+      padding: 20% 0; } }
+  @media only screen and (min-width:64.063em) {
+    .wrap {
+      padding: 15% 0; } }
+  @media only screen and (min-width:90.063em) {
+    .wrap {
+      padding: 10% 0; } }
 
 /**
  * 2.0 Typography
@@ -3903,7 +3913,8 @@ footer {
 * -------------------------------------
 */
 .story-comments {
-  background-color: #f5f5f5; }
+  background-color: #f5f5f5;
+  border-top: 0.0625rem solid #DDDDDD; }
 
 /* Masonry Gallery
 * -------------------------------------
@@ -3920,20 +3931,33 @@ footer {
 */
 .author-box {
   overflow: hidden;
-  margin-left: 2.8125rem; }
+  margin-left: 3.125rem; }
 
 .author-photo {
   padding: 45%; }
+  @media only screen and (max-width: 40em) {
+    .author-photo {
+      padding: 0;
+      margin: 0.625rem auto 1.5625rem;
+      width: 9.375rem;
+      height: 9.375rem;
+      border-radius: 9.375rem; } }
 
 .author-meta {
   padding: 1.5625rem 1.375rem; }
 
 .author-bio {
-  font-size: 0.765625rem;
+  font-size: 0.875rem;
   line-height: 1.65;
   color: #777777;
   margin-top: 0.3125rem; }
   @media only screen and (min-width:40.063em) {
+    .author-bio {
+      font-size: 0.875rem; } }
+  @media only screen and (min-width:64.063em) {
+    .author-bio {
+      font-size: 0.875rem; } }
+  @media only screen and (min-width:90.063em) {
     .author-bio {
       font-size: 0.875rem; } }
 
